--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
-
-  <body>
-  </body>
-
-  <script src="./script.js"></script>
-
+</head>
+<body>
+    <script src="./script2.js"></script>
+</body>
 </html>
